crates/retrieval/src/snapshots/retrieval__lexical__tests__decoder_timestamps.snap
---
source: crates/retrieval/src/lexical.rs
expression: "index.search(\"decoder timestamps\", 4).unwrap()"
---
[
    ScoredRow {
        row: RowId(
            0,
        ),
        score: 12.01637,
    },
    ScoredRow {
        row: RowId(
            1,
        ),
        score: 11.768679,
    },
]
