crates/retrieval/src/snapshots/retrieval__lexical__tests__monotonic_order.snap
---
source: crates/retrieval/src/lexical.rs
expression: "index.search(\"monotonic order\", 4).unwrap()"
---
[
    ScoredRow {
        row: RowId(
            2,
        ),
        score: 23.206722,
    },
]
